# filemanager

./: .gitignore  CMakeLists.txt  README.md  application.cpp  application.h  com.cutefish.FileManager.xml  cutefish-filemanager.desktop  dbusinterface.cpp  dbusinterface.h  desktopiconprovider.cpp  desktopiconprovider.h  main.cpp  qml.qrc  window.cpp  window.h
.github/workflows/: build.yml
cio/: cfilejob.cpp  cfilejob.h  cfilesizejob.cpp  cfilesizejob.h
debian/: changelog  control  copyright
desktop/: desktop.cpp  desktop.h  desktopsettings.cpp  desktopsettings.h  desktopview.cpp  desktopview.h  dockdbusinterface.cpp  dockdbusinterface.h
dialogs/: createfolderdialog.cpp  createfolderdialog.h  filepropertiesdialog.cpp  filepropertiesdialog.h  openwithdialog.cpp  openwithdialog.h  propertiesdialog.cpp  propertiesdialog.h
draganddrop/: declarativedragdropevent.cpp  declarativedragdropevent.h  declarativedroparea.cpp  declarativedroparea.h  declarativemimedata.cpp  declarativemimedata.h
helper/: filelauncher.cpp  filelauncher.h  fm.cpp  fm.h  keyboardsearchmanager.cpp  keyboardsearchmanager.h  pathhistory.cpp  pathhistory.h  shortcut.cpp  shortcut.h  thumbnailer.cpp  thumbnailer.h  thumbnailerjob.cpp  thumbnailerjob.h
mimetype/: mimeappmanager.cpp  mimeappmanager.h  xdgdesktopfile.cpp  xdgdesktopfile.h
model/: dirlister.cpp  dirlister.h  foldermodel.cpp  foldermodel.h  pathbarmodel.cpp  pathbarmodel.h  placesitem.cpp  placesitem.h  placesmodel.cpp  placesmodel.h  positioner.cpp  positioner.h
qml/: BrowserMenu.qml  BrowserView.qml  FolderGridItem.qml  FolderGridView.qml  FolderIconDelegate.qml  FolderIconView.qml  FolderListDelegate.qml  FolderListItem.qml  FolderListView.qml  FolderPage.qml  GlobalSettings.qml  IconDelegate.qml  ItemMenu.qml  OptionsMenu.qml  PathBar.qml  SideBar.qml  SidebarItem.qml  main.qml
qml/Controls/: IconButton.qml
qml/Desktop/: Desktop.qml  DesktopFolderView.qml  FolderItemDelegate.qml  FolderTools.js  FolderViewDropArea.qml  Main.qml  Wallpaper.qml  main.qml
qml/Dialogs/: CreateFolderDialog.qml  DeleteDialog.qml  EmptyTrashDialog.qml  OpenWithDialog.qml  PropertiesDialog.qml
src/: baselist.cpp  baselist.h  basemodel.cpp  basemodel.h  fm.cpp  fm.h  fmh.cpp  fmh.h  fmlist.cpp  fmlist.h  fmstatic.cpp  fmstatic.h  handy.cpp  handy.h  main.cpp  pathlist.cpp  pathlist.h  placeslist.cpp  placeslist.h  rubberband.cpp  rubberband.h
src/desktop/: desktopsettings.cpp  desktopsettings.h  desktopview.cpp  desktopview.h
src/dialogs/: propertiesdialog.cpp  propertiesdialog.h
src/lib/: fileitemactions.cpp  fileitemactions.h  foldermodel.cpp  foldermodel.h  placesitem.cpp  placesitem.h  placesmodel.cpp  placesmodel.h  positioner.h
thumbnailer/: thumbnailcache.cpp  thumbnailcache.h  thumbnailprovider.cpp  thumbnailprovider.h
translations/: ar_AA.ts  be_BY.ts  be_Latn.ts  bg_BG.ts  bs_BA.ts  cs_CZ.ts  da_DK.ts  de_DE.ts  en_US.ts  eo_XX.ts  es_ES.ts  es_MX.ts  fa_IR.ts  fi_FI.ts  fr_FR.ts  he_IL.ts  hi_IN.ts  hu_HU.ts  id_ID.ts  ie.ts  it_IT.ts  ja_JP.ts  lt_LT.ts  lv_LV.ts  ml_IN.ts  nb_NO.ts  ne_NP.ts  pl_PL.ts  pt_BR.ts  pt_PT.ts  ro_RO.ts  ru_RU.ts  si_LK.ts  sk_SK.ts  so.ts  sr_RS.ts  sv_SE.ts  sw.ts  ta_IN.ts  tr_TR.ts  (+6 more)
widgets/: itemviewadapter.cpp  itemviewadapter.h  rubberband.cpp  rubberband.h
